# coolbird-tagify

./: .gitignore  Makefile  README.md  build.config
cb_file_manager/: braces_close.txt  braces_open.txt  desktop.ini  ke_hoach.md  pubspec.yaml  smb_refactor_plan.md  smb_refactor_plan_libsmb2.md  smb_streaming_improvement_plan.md
cb_file_manager/android/: key.properties
cb_file_manager/android/app/: build.gradle  build.gradle.kts
cb_file_manager/ios/Runner/: Info.plist
cb_file_manager/lib/: main.dart  objectbox-model.json  objectbox.dart  objectbox.g.dart
cb_file_manager/lib/config/: app_theme.dart  language_controller.dart  translation_helper.dart
cb_file_manager/lib/core/: service_locator.dart
cb_file_manager/lib/helpers/: README.md  batch_tag_manager.dart  external_app_helper.dart  fc_native_video_thumbnail.dart  filesystem_utils.dart  folder_sort_manager.dart  folder_thumbnail_service.dart  frame_timing_optimizer.dart  index.dart  native_vlc_direct_helper.dart  network_file_helper.dart  network_thumbnail_helper.dart  platform_paths.dart  streaming_helper.dart  tag_color_manager.dart  tag_manager.dart  thumbnail_isolate_manager.dart  user_preferences.dart  video_thumbnail_helper.dart  vlc_direct_smb_helper.dart  windows_app_icon.dart
cb_file_manager/lib/pages/: instant_album_demo.dart  lazy_album_demo_page.dart
cb_file_manager/lib/services/: album_auto_rule_service.dart  album_file_scanner.dart  album_isolate_processor.dart  album_service.dart  background_album_processor.dart  directory_watcher_service.dart  featured_albums_service.dart  lazy_album_scanner.dart  memory_management_service.dart  network_credentials_service.dart  optimized_album_service.dart  permission_state_service.dart  pip_window_service.dart  smart_album_service.dart  streaming_service_manager.dart  video_player_optimizer.dart
cb_file_manager/lib/ui/: drawer.dart  home.dart  main_ui.dart  template.dart
cb_file_manager/lib/utils/: app_logger.dart
cb_file_manager/lib/widgets/: lazy_album_grid.dart  lazy_video_thumbnail.dart  tag_management_section.dart
cb_file_manager/linux/: CMakeLists.txt
cb_file_manager/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
cb_file_manager/linux/runner/: my_application.cc
cb_file_manager/macos/Flutter/: GeneratedPluginRegistrant.swift
cb_file_manager/test/: ftp_entry_type_test.dart  widget_test.dart
cb_file_manager/web/: index.html  manifest.json
cb_file_manager/windows/: CMakeLists.txt
cb_file_manager/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
cb_file_manager/windows/runner/: CMakeLists.txt  app_icon_plugin.cpp  app_icon_plugin.h  fc_native_video_thumbnail_plugin.cpp  ffmpeg_thumbnail_helper.cpp  ffmpeg_thumbnail_helper.h  file_operations_plugin.cpp  file_operations_plugin.h  flutter_window.cpp  main.cpp  win32_window.cpp  window_utils_plugin.cpp  window_utils_plugin.h
cb_file_manager/windows/smb_native/: smb_native.cpp
docs/: brownfield-architecture.md  coding-standards.md  contribution-guide.md  feature-list.md  index.md  project-brief.md  testing-strategy.md  troubleshooting.md  unified-project-structure.md
docs/features/: database-objectbox.md  database.md  file-management.md  file-search.md  network-browsing.md  permissions-flutter-spec.md  permissions-ux.md  platform-integration.md  streaming.md  tag-management.md  ui-ux.md  video-player.md
docs/stories/: permissions-onboarding.story.md
installer/windows/: installer.iss  installer.wxs
installer/windows/assets/: LicenseAgreement.rtf  LicenseAgreement.txt
mobile_smb_native/: CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  README_IMPLEMENTATION.md  build_and_test.ps1  build_native.ps1  pubspec.yaml
mobile_smb_native/.dart_tool/: package_config.json  package_config_subset  package_graph.json
mobile_smb_native/.dart_tool/extension_discovery/: vs_code.json
mobile_smb_native/android/: CMakeLists.txt  build.gradle  settings.gradle
mobile_smb_native/android/src/main/: AndroidManifest.xml
mobile_smb_native/android/src/main/kotlin/com/coolbird/mobile_smb_native/: MobileSmbNativePlugin.kt
mobile_smb_native/android/src/test/kotlin/com/coolbird/mobile_smb_native/: MobileSmbNativePluginTest.kt
mobile_smb_native/example/: .flutter-plugins-dependencies  README.md  pubspec.yaml
mobile_smb_native/example/.dart_tool/: package_config.json  package_config_subset  package_graph.json
mobile_smb_native/example/integration_test/: plugin_integration_test.dart
mobile_smb_native/example/lib/: main.dart
mobile_smb_native/example/linux/: CMakeLists.txt
mobile_smb_native/example/test/: widget_test.dart
mobile_smb_native/example/windows/: CMakeLists.txt
mobile_smb_native/ios/: mobile_smb_native.podspec
mobile_smb_native/ios/Classes/: MobileSmbNativePlugin.swift
mobile_smb_native/lib/: mobile_smb_native.dart  mobile_smb_native_method_channel.dart  mobile_smb_native_platform_interface.dart
mobile_smb_native/lib/src/: mobile_smb_client.dart  mobile_smb_native_method_channel.dart  (+6 more)
mobile_smb_native/linux/: CMakeLists.txt  mobile_smb_native_plugin.cc  mobile_smb_native_plugin_private.h
mobile_smb_native/macos/: mobile_smb_native.podspec
mobile_smb_native/native/: CMakeLists.txt  smb_bridge_stub.cpp
mobile_smb_native/native/include/: smb_bridge.h  smb_client.h  thumbnail_generator.h
mobile_smb_native/native/src/: smb_bridge.cpp  smb_bridge_stub.cpp  smb_client.cpp  smb_client.h  stub_implementations.cpp  thumbnail_generator.cpp  thumbnail_generator.h
mobile_smb_native/test/: mobile_smb_native_method_channel_test.dart  mobile_smb_native_test.dart  smb_native_service_test.dart  smb_version_test.dart
mobile_smb_native/windows/: CMakeLists.txt  mobile_smb_native_plugin.cpp  mobile_smb_native_plugin_c_api.cpp  mobile_smb_native_plugin_c_api.h  test_plugin.cpp  test_plugin.h  test_plugin_c_api.cpp
mobile_smb_native/windows_backup/: CMakeLists.txt  mobile_smb_native_plugin_c_api.cpp  mobile_smb_native_temp_plugin.cpp  mobile_smb_native_temp_plugin.h  mobile_smb_native_temp_plugin_c_api.cpp
scripts/: build.sh
(+244 files in other folders)
